test/TestSuite/Scheduler/Errors/onend_wrong_direction.tjp
project "Test" 2011-01-08 +1m

resource r1 "R1"
resource r2 "R2"

task "Task 1" {
  task t2 "Task 2" {
    effort 1w
    allocate r1
    scheduling alap
  }  
# MARK: error 13 onend_wrong_direction
  task "Task 3" {
    precedes !t2 { onend }
    effort 1w
    allocate r2
    scheduling asap
  }
}
